# RMX5010_Kernel

./: .gitignore  BUILD.bazel  Makefile  build.config.common  build.config.gki  build.config.msm.perf  build.config.msm.sun.le  build.config.msm.sun.vm  build.sh  build.targets  build_with_bazel.py  consolidate.bzl  consolidate_16k.bzl  files_gki_aarch64.txt  genheaders  modules.bzl  modules.list.msm.monaco  modules.list.msm.sun  modules.list.msm.sun-le  modules.systemdlkm_blocklist.msm.sun  modules.systemdlkm_blocklist.msm.sun-le  modules.vendor_blocklist.msm.sun-le  monaco.bzl  msm_common.bzl  msm_kernel_16k_la.bzl  msm_kernel_extensions.bzl  msm_kernel_la.bzl  msm_kernel_le.bzl  msm_platforms.bzl  parrot.bzl  sun.bzl  sun_le.bzl  target_variants.bzl
drivers/power/oplus/bazel/: BUILD.bazel
drivers/power/oplus/bazel/config/: modules.bzl
drivers/power/oplus/bazel/defconfig/: config_define.bzl  oplus_canoe_consolidate_config.bzl  oplus_canoe_perf_config.bzl  oplus_k6789v1_user_config.bzl  oplus_k6789v1_userdebug_config.bzl  oplus_k6895v1_user_config.bzl  oplus_k6895v1_userdebug_config.bzl  oplus_k6993v1_user_config.bzl  oplus_k6993v1_userdebug_config.bzl
drivers/power/oplus/bazel/gauge_i2c_rst/: Makefile  oplus_i2c_rst_notify.h
drivers/power/oplus/bazel/kleaf-scripts/: defconfig.bzl  defconfig_fragment.bzl  filter_target.bzl  flatten_kconfig.sh  gen_oplus_chg_ic_cfg.bzl  global_define.bzl  kconfig.bzl  prebuild.bzl  targets.bzl  version.bzl
drivers/power/oplus/bazel/pd_ext/: Kconfig.ddk  pd_dpm_core.c  pd_policy_engine.c  pd_policy_engine_snk.c  tcpc_rt1711h.c  (+6 more)
(+1474 files in other folders)
