package(
    default_visibility = [
        "//visibility:public",
    ],
)

load("//build/kernel/oplus:oplus_modules_dist.bzl", "ddk_copy_to_dist_dir")

load(":kleaf-scripts/global_define.bzl", "global_define")
load(":config/modules.bzl", "define_oplus_cfg_module")
load(":test-kit/modules.bzl", "define_test_kit_module")
load(":v1/modules.bzl", "define_oplus_chg_module")
load(":v2/modules.bzl", "define_oplus_chg_v2_module")
load(":v2/ufcs/modules.bzl", "define_ufcs_class_module")

py_binary(
    name = "v2/scripts/ic_cfg_parse",
    srcs = ["v2/scripts/ic_cfg_parse.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@io_abseil_py//absl/flags:argparse_flags",
    ],
)

global_define()

module_list = []
module_list += define_oplus_cfg_module()
module_list += define_test_kit_module()
module_list += define_oplus_chg_v2_module()
module_list += define_ufcs_class_module()
module_list += define_oplus_chg_module()

ddk_copy_to_dist_dir(
    name = "oplus_chg_modules",
    module_list = module_list,
)
